--- a/ssh.1
+++ b/ssh.1
@@ -33,7 +33,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: ssh.1,v 1.435 2023/07/17 04:08:31 djm Exp $
+.\" $OpenBSD: ssh.1,v 1.436 2023/07/17 05:38:10 jmc Exp $
 .Dd $Mdocdate: July 17 2023 $
 .Dt SSH 1
 .Os
@@ -58,8 +58,8 @@
 .Op Fl m Ar mac_spec
 .Op Fl O Ar ctl_cmd
 .Op Fl o Ar option
-.Op Fl p Ar port
 .Op Fl P Ar tag
+.Op Fl p Ar port
 .Op Fl Q Ar query_option
 .Op Fl R Ar address
 .Op Fl S Ar ctl_path
