--- a/ssh-agent.1
+++ b/ssh-agent.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ssh-agent.1,v 1.76 2023/07/19 13:56:33 djm Exp $
+.\" $OpenBSD: ssh-agent.1,v 1.77 2023/07/20 05:43:39 jmc Exp $
 .\"
 .\" Author: Tatu Ylonen <ylo@cs.hut.fi>
 .\" Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: July 19 2023 $
+.Dd $Mdocdate: July 20 2023 $
 .Dt SSH-AGENT 1
 .Os
 .Sh NAME
@@ -122,12 +122,12 @@ Note that signalling that a
 .Nm
 client remote is performed by
 .Xr ssh 1 ,
-and use of other tools to forward access to the agent socket may circumvent
+and use of other tools to forward access to the agent socket, may circumvent
 this restriction.
 .Pp
 The
-.Cm no-restrict-websafe ,
-instructs
+.Cm no-restrict-websafe
+option instructs
 .Nm
 to permit signatures using FIDO keys that might be web authentication
 requests.
