--- a/ssh-agent.1
+++ b/ssh-agent.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ssh-agent.1,v 1.77 2023/07/20 05:43:39 jmc Exp $
+.\" $OpenBSD: ssh-agent.1,v 1.78 2023/07/23 20:04:45 naddy Exp $
 .\"
 .\" Author: Tatu Ylonen <ylo@cs.hut.fi>
 .\" Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: July 20 2023 $
+.Dd $Mdocdate: July 23 2023 $
 .Dt SSH-AGENT 1
 .Os
 .Sh NAME
@@ -118,9 +118,9 @@ option allows clients of a forwarded
 .Nm
 to load PKCS#11 or FIDO provider libraries.
 By default only local clients may perform this operation.
-Note that signalling that a
+Note that signalling that an
 .Nm
-client remote is performed by
+client is remote is performed by
 .Xr ssh 1 ,
 and use of other tools to forward access to the agent socket, may circumvent
 this restriction.
