--- a/contrib/ssh-copy-id.1
+++ b/contrib/ssh-copy-id.1
@@ -67,7 +67,7 @@ command instead.
 .Pp
 The options are as follows:
 .Bl -tag -width Ds
-.It Fl i Ar identity_file
+.It Fl i Op Ar identity_file
 Use only the key(s) contained in
 .Ar identity_file
 (rather than looking for identities via
