--- a/contrib/ssh-copy-id.1
+++ b/contrib/ssh-copy-id.1
@@ -34,9 +34,10 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .Op Fl s
 .Op Fl x
 .Op Fl i Op Ar identity_file
-.Op Fl p Ar port
-.Op Fl o Ar ssh_option
 .Op Fl t Ar target_path
+.Op Fl F Ar ssh_config
+.Op Bo Fl o Ar ssh_option Bc ...
+.Op Fl p Ar port
 .Op Ar user Ns @ Ns
 .Ar hostname
 .Nm
@@ -104,11 +105,13 @@ on commands which can be used on the remote side.
 .It Fl t Ar target_path
 the path on the target system where the keys should be added
 (defaults to ".ssh/authorized_keys")
-.It Fl p Ar port , Fl o Ar ssh_option
-These two options are simply passed through untouched, along with their
-argument, to allow one to set the port or other
-.Xr ssh 1
-options, respectively.
+.It Fl p Ar port
+Specifies the port to connect to on the remote host.
+.It Fl F Ar ssh_config , Fl o Ar ssh_option
+These options are simply passed through untouched (with their argument)
+to ssh/sftp,
+allowing one to set an alternative config file,
+or other options, respectively.
 .Pp
 Rather than specifying these as command line options,
 it is often better to use (per-host) settings in
